# jsic_list

./: README.md  main.py  pyproject.toml  scrape_jsic.py  scraper.py
conf/: logging.ini
data/: jsic_detail.csv  jsic_division.csv  jsic_major_group.csv
